--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,13 @@
         tools:targetApi="31">
         <activity
             android:name=".BrowseEventsActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:exported="false"/>
         <activity
             android:name=".BrowseJobsActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:exported="false"/>
         <activity
             android:name=".EditProfile"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
